# RtusskiBot

./: .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bots/discord/: discord_bot.py
bots/telegram/: telegram_bot.py
configs/: config.example.toml
discord/: discord_bot.py
migrations/: 20250328220417_initdb.sql
src/bots/: config.py  main.py
src/bots/common/: attachments.py  bot.py  content.py  db.py  models.py
src/bots/discord/: discord_bot.py
src/bots/telegram/: attachments.py  bot_wrapper.py  middleware.py  telegram_bot.py
src/bots/vk/: attachments.py  bot_wrapper.py  utils.py  vkontakte_bot.py
systemd/: bots.service
tests/: test_attachments.py  test_config.py
tests/assets/: config.toml.example
vk/: vkontakte_bot.py
