[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "rtu_bot"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.19.0",
    "aiogram_album==0.0.4b0",
    "cachetools==5.5.2",
    "toml==0.10.2",
    "vkbottle==4.4.2",
    "asyncpg==0.30.0",
]
[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-asyncio",
    "flake8",
    "mypy",
    "pre-commit",
    "blue",
]

[tool.black]
line-length = 79

[project.scripts]
bots = "bots.main:main"


[tool.pytest.ini_options]
asyncio_mode = "auto"
